# project-init

./: .gitignore  .mcp.json  .pre-commit-config.yaml  .quality-gate.json  .secrets.baseline  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DECISIONS.md  Dockerfile.test  GitVersion.yml  Makefile  README.md  cliff.toml  pyproject.toml  sonar-project.properties
.chrysa/: STANDARDS.md
.ci-backup-20260426-001316/: dependabot.yml
.claude/: settings.json
.github/: actionlint.yaml  auto_assign.yml  copilot-instructions.md  dependabot.yml  labeler.yml  labels.yml
ai/: CLAUDE.md  evaluation-datasets.md  prompt-library.md
decisions/: DEC-001-auth-provider.md  DEC-002-db-choice.md  DEC-003-cache-strategy.md  _TEMPLATE.md
docs/: anti-patterns.md  api-contracts.md  app-spec.md  architecture.md  brand-brief.md  business-rules.md  changelog.md  coding-standards.md  copywriting-guide.md  data-dictionary.md  decision-log.md  deployment.md  domain-glossary.md  error-journal.md  feature-backlog.md  integrations.md  known-issues.md  observability.md  personas.md  security.md  system-patterns.md  ux-rules.md
examples/: perfect_api_view.py  perfect_repository.py  perfect_schema.py  perfect_serializer.py  perfect_service.py  perfect_viewset.py
legal/: cgu.md  mentions-legales.md
postmortems/: _TEMPLATE.md  payment-incident-2026-05.md  webhook-failure-2026-06.md
prompts/: classification-agent.md  extraction-agent.md  onboarding-agent.md  sales-agent.md  support-agent.md
schemas/: payment.schema.json  project.schema.json  user.schema.json
scripts/: quality_gate.py
(+28 files in other folders)
