[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project-init"
version = "0.1.0"
requires-python = ">=3.14"

[project.optional-dependencies]
test = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.coverage.run]
source = ["scripts"]
omit = ["tests/*", "scripts/__main__.py"]

[tool.coverage.report]
fail_under = 80
show_missing = true
